ghc-6.2/hslibs/win32/Win32Window_stub_ffi.h

extern void* prim_childWindowFromPoint(HWND hwnd,LONG gc_arg2,LONG gc_arg3);
extern HWND access_prim_childWindowFromPoint_res1(HsPtr);
extern int access_prim_childWindowFromPoint_gc_failed(HsPtr);
extern void* access_prim_childWindowFromPoint_gc_failstring(HsPtr);
extern void* prim_childWindowFromPointEx(HWND hwnd,LONG gc_arg2,LONG gc_arg3,DWORD arg2);
extern HWND access_prim_childWindowFromPointEx_res1(HsPtr);
extern int access_prim_childWindowFromPointEx_gc_failed(HsPtr);
extern void* access_prim_childWindowFromPointEx_gc_failstring(HsPtr);
extern void* prim_closeWindow(HWND arg1);
extern int access_prim_closeWindow_gc_failed(HsPtr);
extern void* access_prim_closeWindow_gc_failstring(HsPtr);
extern void* prim_deferWindowPos(HDWP arg1,HWND arg2,HWND arg3,int arg4,int arg5,int arg6,int arg7,UINT arg8);
extern HDWP access_prim_deferWindowPos_res1(HsPtr);
extern int access_prim_deferWindowPos_gc_failed(HsPtr);
extern void* access_prim_deferWindowPos_gc_failstring(HsPtr);
extern void* prim_destroyWindow(HWND arg1);
extern int access_prim_destroyWindow_gc_failed(HsPtr);
extern void* access_prim_destroyWindow_gc_failstring(HsPtr);
extern void* prim_endDeferWindowPos(HDWP arg1);
extern int access_prim_endDeferWindowPos_gc_failed(HsPtr);
extern void* access_prim_endDeferWindowPos_gc_failstring(HsPtr);
extern HWND prim_findWindow(char * arg1,char * arg2);
extern HWND prim_findWindowEx(HWND arg1,HWND arg2,char * arg3,char * arg4);
extern int prim_flashWindow(HWND arg1,int arg2);
extern void* prim_moveWindow(HWND arg1,int arg2,int arg3,int arg4,int arg5,int arg6);
extern int access_prim_moveWindow_gc_failed(HsPtr);
extern void* access_prim_moveWindow_gc_failstring(HsPtr);
extern HWND prim_getDesktopWindow();
extern HWND prim_getForegroundWindow();
extern void* prim_getParent(HWND arg1);
extern HWND access_prim_getParent_res1(HsPtr);
extern int access_prim_getParent_gc_failed(HsPtr);
extern void* access_prim_getParent_gc_failstring(HsPtr);
extern void* prim_getTopWindow(HWND arg1);
extern HWND access_prim_getTopWindow_res1(HsPtr);
extern int access_prim_getTopWindow_gc_failed(HsPtr);
extern void* access_prim_getTopWindow_gc_failstring(HsPtr);
extern UINT prim_sWP_NOSIZE();
extern UINT prim_sWP_NOMOVE();
extern UINT prim_sWP_NOZORDER();
extern UINT prim_sWP_NOREDRAW();
extern UINT prim_sWP_NOACTIVATE();
extern UINT prim_sWP_FRAMECHANGED();
extern UINT prim_sWP_SHOWWINDOW();
extern UINT prim_sWP_HIDEWINDOW();
extern UINT prim_sWP_NOCOPYBITS();
extern UINT prim_sWP_NOOWNERZORDER();
extern UINT prim_sWP_NOSENDCHANGING();
extern UINT prim_sWP_DRAWFRAME();
extern UINT prim_sWP_NOREPOSITION();