ghc-6.2/hslibs/win32/Win32Window.hs


childWindowFromPoint :: HWND -> POINT -> IO MbHWND
childWindowFromPoint hwnd gc_arg1 =
  case gc_arg1 of { (gc_arg2,gc_arg3) ->
  prim_childWindowFromPoint hwnd gc_arg2 gc_arg3
  >>= \ gc_result ->
  access_prim_childWindowFromPoint_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_childWindowFromPoint_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_childWindowFromPoint_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (if nullHANDLE == (res1)
	then return Nothing
	else (return ((Just res1)))) >>= \ gc_res1 ->
       (return (gc_res1))}
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_childWindowFromPoint" prim_childWindowFromPoint :: Addr -> Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_childWindowFromPoint_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_childWindowFromPoint_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_childWindowFromPoint_gc_failstring :: Addr -> IO (Addr)

childWindowFromPointEx :: HWND -> POINT -> DWORD -> IO MbHWND
childWindowFromPointEx hwnd gc_arg1 arg2 =
  case gc_arg1 of { (gc_arg2,gc_arg3) ->
  prim_childWindowFromPointEx hwnd gc_arg2 gc_arg3 arg2
  >>= \ gc_result ->
  access_prim_childWindowFromPointEx_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_childWindowFromPointEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_childWindowFromPointEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (if nullHANDLE == (res1)
	then return Nothing
	else (return ((Just res1)))) >>= \ gc_res1 ->
       (return (gc_res1))}
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_childWindowFromPointEx" prim_childWindowFromPointEx :: Addr -> Int32 -> Int32 -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_childWindowFromPointEx_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_childWindowFromPointEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_childWindowFromPointEx_gc_failstring :: Addr -> IO (Addr)

closeWindow :: HWND -> IO ()
closeWindow arg1 =
  prim_closeWindow arg1
  >>= \ gc_result ->
  access_prim_closeWindow_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_closeWindow_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall "Win32Window_stub_ffi.h prim_closeWindow" prim_closeWindow :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_closeWindow_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_closeWindow_gc_failstring :: Addr -> IO (Addr)

deferWindowPos :: HDWP -> HWND -> HWND -> Int -> Int -> Int -> Int -> SetWindowPosFlags -> IO HDWP
deferWindowPos arg1 arg2 arg3 arg4 arg5 arg6 arg7 arg8 =
  prim_deferWindowPos arg1 arg2 arg3 arg4 arg5 arg6 arg7 arg8
  >>= \ gc_result ->
  access_prim_deferWindowPos_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_deferWindowPos_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_deferWindowPos_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_deferWindowPos" prim_deferWindowPos :: Addr -> Addr -> Addr -> Int -> Int -> Int -> Int -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_deferWindowPos_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_deferWindowPos_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_deferWindowPos_gc_failstring :: Addr -> IO (Addr)

destroyWindow :: HWND -> IO ()
destroyWindow arg1 =
  prim_destroyWindow arg1
  >>= \ gc_result ->
  access_prim_destroyWindow_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_destroyWindow_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall "Win32Window_stub_ffi.h prim_destroyWindow" prim_destroyWindow :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_destroyWindow_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_destroyWindow_gc_failstring :: Addr -> IO (Addr)

endDeferWindowPos :: HDWP -> IO ()
endDeferWindowPos arg1 =
  prim_endDeferWindowPos arg1
  >>= \ gc_result ->
  access_prim_endDeferWindowPos_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_endDeferWindowPos_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_endDeferWindowPos" prim_endDeferWindowPos :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_endDeferWindowPos_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_endDeferWindowPos_gc_failstring :: Addr -> IO (Addr)

findWindow :: String -> String -> IO MbHWND
findWindow gc_arg1 gc_arg2 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  (marshall_string_ gc_arg2) >>= \ (arg2) ->
  prim_findWindow arg1 arg2
  >>= \  res1  ->
  (if nullHANDLE == (res1)
   then return Nothing
   else (return ((Just res1)))) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_findWindow" prim_findWindow :: Addr -> Addr -> IO (Addr)

findWindowEx :: HWND -> HWND -> String -> String -> IO MbHWND
findWindowEx arg1 arg2 gc_arg1 gc_arg2 =
  (marshall_string_ gc_arg1) >>= \ (arg3) ->
  (marshall_string_ gc_arg2) >>= \ (arg4) ->
  prim_findWindowEx arg1 arg2 arg3 arg4
  >>= \  res1  ->
  (if nullHANDLE == (res1)
   then return Nothing
   else (return ((Just res1)))) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_findWindowEx" prim_findWindowEx :: Addr -> Addr -> Addr -> Addr -> IO (Addr)

flashWindow :: HWND -> Bool -> IO Bool
flashWindow arg1 gc_arg1 =
  (marshall_bool_ gc_arg1) >>= \ (arg2) ->
  prim_flashWindow arg1 arg2
  >>= \  res1  ->
  (unmarshall_bool_ res1) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_flashWindow" prim_flashWindow :: Addr -> Int -> IO (Int)
-- No error code

moveWindow :: HWND -> Int -> Int -> Int -> Int -> Bool -> IO ()
moveWindow arg1 arg2 arg3 arg4 arg5 gc_arg1 =
  (marshall_bool_ gc_arg1) >>= \ (arg6) ->
  prim_moveWindow arg1 arg2 arg3 arg4 arg5 arg6
  >>= \ gc_result ->
  access_prim_moveWindow_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_moveWindow_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall "Win32Window_stub_ffi.h prim_moveWindow" prim_moveWindow :: Addr -> Int -> Int -> Int -> Int -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_moveWindow_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_moveWindow_gc_failstring :: Addr -> IO (Addr)

getDesktopWindow :: IO HWND
getDesktopWindow =
  prim_getDesktopWindow
  >>= \  res1  ->
  (return (res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_getDesktopWindow" prim_getDesktopWindow :: IO (Addr)

getForegroundWindow :: IO HWND
getForegroundWindow =
  prim_getForegroundWindow
  >>= \  res1  ->
  (return (res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_getForegroundWindow" prim_getForegroundWindow :: IO (Addr)

getParent :: HWND -> IO HWND
getParent arg1 =
  prim_getParent arg1
  >>= \ gc_result ->
  access_prim_getParent_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getParent_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getParent_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_getParent" prim_getParent :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getParent_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getParent_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getParent_gc_failstring :: Addr -> IO (Addr)

getTopWindow :: HWND -> IO HWND
getTopWindow arg1 =
  prim_getTopWindow arg1
  >>= \ gc_result ->
  access_prim_getTopWindow_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getTopWindow_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getTopWindow_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_getTopWindow" prim_getTopWindow :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getTopWindow_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getTopWindow_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getTopWindow_gc_failstring :: Addr -> IO (Addr)


type SetWindowPosFlags = UINT

foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sWP_NOSIZE" sWP_NOSIZE :: SetWindowPosFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sWP_NOMOVE" sWP_NOMOVE :: SetWindowPosFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sWP_NOZORDER" sWP_NOZORDER :: SetWindowPosFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sWP_NOREDRAW" sWP_NOREDRAW :: SetWindowPosFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sWP_NOACTIVATE" sWP_NOACTIVATE :: SetWindowPosFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sWP_FRAMECHANGED" sWP_FRAMECHANGED :: SetWindowPosFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sWP_SHOWWINDOW" sWP_SHOWWINDOW :: SetWindowPosFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sWP_HIDEWINDOW" sWP_HIDEWINDOW :: SetWindowPosFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sWP_NOCOPYBITS" sWP_NOCOPYBITS :: SetWindowPosFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sWP_NOOWNERZORDER" sWP_NOOWNERZORDER :: SetWindowPosFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sWP_NOSENDCHANGING" sWP_NOSENDCHANGING :: SetWindowPosFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sWP_DRAWFRAME" sWP_DRAWFRAME :: SetWindowPosFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sWP_NOREPOSITION" sWP_NOREPOSITION :: SetWindowPosFlags

----------------------------------------------------------------
-- HDCs
----------------------------------------------------------------

type GetDCExFlags   = DWORD
